--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
+    "multer": "^1.4.5-lts.1",
     "supervisor": "^0.12.0",
     "uuid": "^10.0.0"
   },
